--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@rematch/core": "^1.1.0",
     "classnames": "^2.2.6",
-    "node-sass": "^4.12.0",
     "primereact": "^3.1.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -32,5 +31,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-sass": "^4.12.0"
   }
 }
