--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^6.0.1",
+    "eslint-plugin-react": "^7.14.2",
     "node-sass": "^4.12.0",
+    "react-social-login": "^3.4.4",
     "redux": "^4.0.1"
   }
 }
